# webhook-ai-router

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
docs/: architecture.md  n8n-integration.md
examples/: curl-examples.sh  n8n-workflow.json
src/webhook_ai_router/: __init__.py  config.py  main.py
src/webhook_ai_router/api/: middleware.py
src/webhook_ai_router/api/routes/: health.py  webhooks.py
src/webhook_ai_router/core/: exceptions.py  idempotency.py  logging.py  metrics.py  security.py  settings.py
src/webhook_ai_router/db/: models.py  session.py
src/webhook_ai_router/infra/: arq.py  redis.py
src/webhook_ai_router/schemas/: dispatch.py  enrichment.py  errors.py  webhooks.py
src/webhook_ai_router/services/: dispatch.py  events.py  ingest.py  llm.py
src/webhook_ai_router/workers/: __main__.py  tasks.py
tests/: conftest.py
tests/integration/: test_full_flow.py  test_persistence.py  test_webhooks_endpoint.py
tests/unit/: test_dispatch.py  test_health.py  test_idempotency.py  test_llm_factory.py  test_llm_gemini.py  test_metrics.py  test_security.py
