[project]
name = "webhook-ai-router"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JohnARI", email = "john.aristosa@hotmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.97.0",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "redis>=5.3.1",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn>=0.46.0",
]

[project.scripts]
webhook-ai-router = "webhook_ai_router:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx-ws>=0.9.0",
    "mypy>=1.20.2",
    "polyfactory>=3.3.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "types-redis>=4.6.0.20241004",
]
